--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,14 @@
 	"scripts" : ["event.js", "jquery.js"],
 	"persistent" : true
     },
-    "icons" : {"256" : "nativedoc.ico"},
+    "icons" : {"256" : "icon/256.png",
+                "128" : "icon/128.png",
+                "96" : "icon/96.png",
+                "72" : "icon/72.png",
+                "64" : "icon/64.png",
+                "48" : "icon/48.png",
+                "32" : "icon/32.png",
+                "16" : "icon/16.png"},
     "description": "Viewer for docx and pptx",
     "permissions": ["webRequest",
             "webRequestBlocking",
