--- a/cortex.yaml
+++ b/cortex.yaml
@@ -7,7 +7,7 @@ info:
   contact:
     email: test@gmail.com
   version: '1.0'
-  title: Drafts
+  title: Drafts Test
   x-slack-webhook:
     - cortex-demo
   x-pagerduty-service: PM66VXY 
