--- a/cortex.yaml
+++ b/cortex.yaml
@@ -2,12 +2,11 @@ swagger: '2.0'
 schemes:
   - https
 basePath: /
-host: api.typeform.com
 info:
   contact:
     email: test@gmail.com
   version: '1.0'
-  title: Drafts Test Test Test
+  title: Drafts Test Test Test Test
   x-slack-webhook:
     - cortex-demo
   x-pagerduty-service: PM66VXY 
